# obsidian-importer

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: speckit.implement.md  speckit.specify.md
.claude/hooks/: python-lint.sh
.github/workflows/: lint.yml  makefile-lint.yml  test.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
conf/base/: catalog.yml  genre_mapping.yml.sample  logging.yml  parameters.yml  parameters_organize.local.yml.example
conf/integration/: catalog.yml  parameters.yml
conf/test/: catalog.yml
scripts/: __init__.py  generate_golden_responses.py  migrate_data_layers.py  organize_files.py  setup-project.sh  setup-venv.sh  sync-to-rag.sh  test-e2e-update-golden.sh  test-e2e.sh  test-integration.sh
scripts/makefile/: prepare-test-dirs.sh  reprocess-review-claude.sh  reprocess-review.sh  setup-project.sh  test-e2e-update-golden.sh  test-e2e.sh  test-integration.sh
scripts/prompts/: reprocess-review.txt
specs/001-index-file-organizer/: plan.md
specs/002-filename-normalize/: data-model.md  quickstart.md  research.md  spec.md
specs/003-llm-quality-enhancement/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-normalizer-quality-fix/: spec.md
specs/005-robust-json-parse/: plan.md  tasks.md
specs/006-index-markdown-process/: plan.md  quickstart.md
specs/007-llm-multi-stage/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/008-japanese-summary/: research.md  spec.md  tasks.md
specs/009-scripts-refactor/: data-model.md  plan.md  quickstart.md  research.md
specs/012-summary-quality/: plan.md  research.md  spec.md  tasks.md
specs/013-vault-hierarchy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-pipeline-consolidation/: quickstart.md  research.md  spec.md  tasks.md
specs/015-claude-export-docs/: plan.md  quickstart.md  research.md  tasks.md
specs/016-phase2-simplify/: research.md  spec.md  tasks.md
specs/017-import-session-log/: plan.md  quickstart.md  research.md  tasks.md
specs/018-retry-errors/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/019-file-tracking-hash/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/020-large-file-chunking/: quickstart.md  research.md  spec.md  tasks.md
specs/021-import-error-debug/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/022-import-file-id/: data-model.md  integration-test-guide.md  plan.md  research.md  spec.md  tasks.md  tasks.md.bk
specs/023-phase1-file-id/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/024-rag-migration-plan/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/025-bonobo-tenacity-migration/: data-model.md  plan.md  quickstart.md  spec.md
specs/026-etl-import-parity/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/027-debug-step-output/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/028-flexible-io-ratios/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/029-python-lint-hook/: spec.md
specs/030-chatgpt-import/: checklist.md  plan.md  research.md
specs/031-extract-discovery-delegation/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/032-extract-step-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/033-resume-skip-processed/: IMPLEMENTATION_COMPLETE.md  data-model.md  plan.md  quickstart.md  spec.md
specs/034-jekyll-import/: data-model.md  plan.md  research.md  tasks.md
specs/035-chunking-mixin/: quickstart.md  test-skeleton-ph4-output.md
specs/036-cli-refactor/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/037-resume-mode-redesign/: data-model.md  quickstart.md  research.md  tasks.md
specs/038-too-large-llm-context/: plan.md  research.md  spec.md
specs/039-resume-baseclass-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/040-resume-extract-reuse/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/041-fix-extract-dedup/: data-model.md  plan.md  quickstart.md  spec.md
specs/042-llm-markdown-response/: data-model.md  plan.md  spec.md  tasks.md
specs/044-kedro-migration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  tasks.md.bk
specs/045-fix-kedro-input/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/046-e2e-output-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/047-e2e-full-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/048-output-quality-improvement/: tasks.md
specs/049-output-quality-improve/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/050-fix-content-compression/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/051-ollama-params-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/052-improve-summary-quality/: marker_preprocessor.py  plan.md  quickstart.md  research.md  run_v5_final.py  spec.md  tasks.md  v3-prompt.txt  verification-plan.md  verification-results.md
specs/053-argos-translate-integration/: spec.md
specs/055-reduce-review-ratio/: spec.md
specs/056-fix-markdown-codeblock/: spec.md
specs/057-frontmatter-file-organizer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/058-refine-genre-classification/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/059-organize-vault-output/: data-model.md  (+5 more)
tests/: conftest.py  test_datasets.py  test_e2e_golden.py  test_hooks.py  test_hooks_warmup.py  test_integration.py  test_organize_files.py  test_pipeline_registry.py  test_warmup_error.py
(+818 files in other folders)
