[project]
name = "obsidian-knowledge-base"
version = "0.1.0"
description = "Obsidian Knowledge Base ETL Pipeline"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "tenacity>=8.0",
    "requests>=2.28",
    "kedro==1.1.1",
    "kedro-datasets>=9.0",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.0",
    "ruff>=0.1.0",
    "kedro-viz>=10.0",
]

[project.entry-points."kedro.hooks"]

[tool.kedro]
package_name = "obsidian_etl"
project_name = "obsidian-etl"
kedro_init_version = "1.1.1"
tools = ["lint", "test"]
source_dir = "src"

[tool.coverage.run]
source = ["src/obsidian_etl"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
# Python source directory
src = ["src"]

# Target Python version
target-version = "py311"

# Line length
line-length = 100

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".staging",
    ".specify",
    ".claude",
]

[tool.ruff.lint]
# Enable specific rule categories
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",  # line too long (handled by line-length)
]

# Disable auto-fix for specific rules (warn only)
unfixable = [
    "F401",  # unused imports (warn only, don't auto-remove)
]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py
"__init__.py" = ["F401"]
# Allow imports at top even if not used immediately in tests
"tests/*.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["src", "obsidian_etl"]

[tool.kedro_telemetry]
project_id = "d43e272a453344c2b75e16ef0c43ff3d"
